--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
-
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "constants": "0.0.2",
+    "create-require": "^1.1.1",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,5 +44,4 @@
       "last 1 safari version"
     ]
   }
-
 }
