--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "async": "^3.2.3",
     "constants": "0.0.2",
     "create-require": "^1.1.1",
     "express": "^4.17.3",
