--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "async": "^3.2.3",
+    "browserify-fs": "^1.0.0",
     "constants": "0.0.2",
     "create-require": "^1.1.1",
     "express": "^4.17.3",
